fixed navbar, links are now visible

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,14 @@
   }
 }
 
+.dropdown-menu {
+  background-color: #252525;
+  a {
+    color: white;
+    font-size: 24px;
+  }
+}
+
 .navbar-toggler-icon {
   background-image: url("https://cdn3.iconfinder.com/data/icons/ui-ux-essentials-solid/24/hamburger-menu-solid-512.png");
 }
